--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<!--The content below is only a placeholder and can be replaced.-->
+<!--The content below is only a placeholder and can be replaced.
 <div class="body" style="text-align:center">
   <h1>
     Welcome to {{title}} !!
@@ -10,7 +10,10 @@
   </div>
   <div *ngFor="let desc of description">
     <!--  {{header}} <br>  -->
-    {{desc}}
+    <!--{{desc}}
 
   </div>
 </div>
+-->
+
+<router-outlet></router-outlet>
