--- a/src/app/pages/landing/landing/landing.component.html
+++ b/src/app/pages/landing/landing/landing.component.html
@@ -1,3 +1,14 @@
-<p>
-  landing works!
-</p>
+<div class="body" style="text-align:center">
+  <h1>
+    Welcome to {{title}} !!
+  </h1>
+  <div class="wrapper">
+    <div *ngFor="let item of arr"> 
+      <span class="title">{{item.title}}</span>
+      <br>
+      {{item.description}} <br>
+      <img class="news-image" src={{item.urlToImage}}>
+    </div>
+  </div>
+</div>
+
