Added responsiveness to image

--- a/src/app/pages/landing/component/landing.component.html
+++ b/src/app/pages/landing/component/landing.component.html
@@ -12,7 +12,7 @@
             <br>
             <span style="text-align: center"> {{item.description}}</span>
             <br>
-            <span> <img class="news-image" src={{item.urlToImage}}></span>
+            <span> <img class="news-image img-fluid" src={{item.urlToImage}}></span>
             <br>
             <br>
           </div>
