--- a/src/app/pages/landing/component/landing.component.scss
+++ b/src/app/pages/landing/component/landing.component.scss
@@ -3,21 +3,16 @@
 
   }
 
+  hr.style2 {
+    border-top: 3px double #8c8b8b;
+  }
+
   // .my-content :nth-child(){
   //   background: #ddd;
   // }
 
   .title {
     font-weight: 700;
-
-  }
-  .news-image {
-    width: 600px;
-    height: 400px;
-    position: relative;
-    display: inline-block;
-    overflow: hidden;
-    margin: 0;
 
   }
 
